# telelink

./: .gitignore  .gitpod.Dockerfile  .mocharc.json  Dockerfile  Procfile  docker-compose.yml  links.sql  package-lock.json  package.json  tsconfig.commonjs.json  tsconfig.json
ansible/: .env.enc  ansible.cfg  app.yml  inventory  nodejs.yml
ansible/templates/: nginx.site.conf.j2
client/: Cargo.toml
client/src/: main.rs  types.rs
client/src/commands/: delete.rs  list.rs  mod.rs  next.rs  open.rs
migrations/: add-description-to-links.sql
scripts/: add-image-to-links.sql  db.sql  redo.js
src/: bot.ts  cli.ts  db.ts  extract.ts  fetch.ts  firebase.ts  index.ts  server.ts  types.ts
telelink/: Cargo.toml
telelink/src/: main.rs
test/: extract.spec.ts  utils.ts
test/fixtures/: blog.html  hackernews.html  stackoverflow.html
