[package]
edition = "2018"
name = "telelink"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = {version = "3.0", features = ["derive"]}
colored = "2"
futures = "0.3"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
timeago = "0.3.1"
tokio = {version = "1.12.0", features = ["full"]}
webbrowser = "0.6.0"
